# UTIL-SHELL-GNU_shell_utilities

./: Makefile.in  Makefile.os2  README  README.md  acconfig.h  config.h.in  config.h.os2  configure  configure.in  patches.os2
doc/: Makefile.in  texinfo.tex  version.texi
lib/: Makefile.in  Makefile.os2  basename.c  error.c  gethostname.c  gnushu.def  long-options.c  stime.c  stripslash.c  utsname.c  utsname.h  xgetcwd.c
man/: Makefile.in  su.1
src/: Makefile.in  Makefile.os2  basename.c  date.c  dirname.c  echo.c  env.c  expr.c  gnushutl.def  hostname.c  id.c  logname.c  nice.c  pathchk.c  printenv.c  printf.c  pwd.c  sleep.c  system.h  tee.c  test.c  tty.c  uname.c  version.c  whoami.c  yes.c
